examples/test/testpolicy10055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10055
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key27: value21
      key33: value9
      key4: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value12
          key43: value25
          key21: value18
      podSelector:
        matchLabels:
          key26: value25
          key25: value21
          key21: value48
